Bug 1479218 - deny request when inner window is destroyed. r=cpearce a=pascalc

The AutoplayPermissionManager might be destroyed before the AutoplayPermissionRequest, so we can't
get the response from request before AutoplayPermissionManager is destroyed.

Therefore, we should manually reject the promise when the inner window is going to be destroyed.

Differential Revision: https://phabricator.services.mozilla.com/D5906